Fixing drum machine extending beyond screen width on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,8 +25,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
   width: calc(100% - 10px);
-  max-width: 360px;
+  max-width: 480px;
   padding: 40px;
   background-color: rgba(34, 34, 34, 0.8);
   border-radius: 20px;
